# Contribute

./: README.md
df/: README.md
ex/: README.md  ex.sh
ex/ex1/: README.md
kdw/: README.md  docker-dompose.sh
kdw/ELK/: ELK.sh
kdw/Grafana_Prometheus _Docker/: Grafana_Prometheus _Docker.md
kdw/docker+zbx/: zbx.sh
otp/: DevOps面試考題.docx  aws-eks跳板機安裝.sh  未命名绘图.drawio  清空剪貼簿.bat  香港C區機器檢查表_阿里雲.csv
otp/Esunny/: 易盛服務器.xltx  极星客户端IP地址修改.txt
otp/MySQL-Master-Slave-Replication/: 阿里云RDS和其他MySQL主从同步.txt
otp/OTP辦公室人員異動與密碼更新軟硬體規範說明/: OTP辦公室人員異動與密碼更新軟硬體規範說明.pptx
otp/czim - 複製/: 巨丰微讯服务器 (1).txt
otp/demo/: [huidu]create mongo db user (2).sh  config (4).json
otp/install/: RiskControl_sizes_Compare_UAT_Prod.sh  RiskControl_update_Prod.sh  install.sh  install_mysql57.sh  kafka_113.sh  kill_tomcat_resart.sh  new-install.sh  redis_update_mysql.sh  redis_value_update_mysql.sh
otp/ionic-AutoBuildApk_Chrome_Cloud-0222/: AutoBuildApk_Chrome_Cloud-0222.py
otp/jira優化/: Jira開發流程優化說明.pptx
otp/nas/: README.md
otp/office/: ZYC-OTP總資產表20231114.xlsx  辦公室網路設備總表.xlsx
otp/other/: OTP多線路計畫.pptx  OTP多線路計畫1.pptx  一通數位有限公司工具軟體管制表.xlsx  已更新雲端帳號密碼.xlsx  無題 1.ods
otp/qa-auto/: Dockerfile  jenkins_run_regression.sh  requirements.txt
otp/restart-all-svc/: Img2base64.py  README.md  Ui_restart_quote.py  controller.py  jenkins_app.py  pic2str.py  pyproject.toml  restart_quote.ui  start.py  start.spec  tgbot.py  tgbot_invest.py  userLogin.py  風控網關重啟小工具帳密.xlsx
otp/scripts/: check_process.sh  (+7 more)
sc/: README.md  clear old log1.sh.txt  install_mediawiki.sh  stormda.sh
yg/: README.md
(+1145 files in other folders)
